# insject

./: .gitignore  LICENSE  README.md
setns-common/: Cargo.toml
setns-common/src/: lib.rs
setns-so/: .gitignore  Cargo.toml  build.rs  fetch-frida.sh  patch.py
setns-so/src/: core.rs  lib.rs  main.rs
