[package]
name = "setns-common"
version = "1.0.0"
authors = ["jeff.dileo@nccgroup.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.25", features = ["derive"] }
commands = "0.0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
