[package]
name = "setns"
version = "1.0.0"
authors = ["jeff.dileo@nccgroup.com"]
edition = "2024"

[lib]
name = "setns"
#crate-type = ["dylib"]
crate-type = ["cdylib"]
#crate-type = ["staticlib"]
#path = "src/libw.rs"

[[bin]]
name = "insject"
path = "src/main.rs"

[dependencies]
#gumshoe = { path = "../../frida-gum-rs" }
gumshoe = { git = "https://github.com/ChaosData/frida-gum-rs" }
setns-common = { path = "../setns-common" }
clap = { version = "3.2.25", features = ["derive"] }
libc = "0.2"
ctor = "0.2.8"
#selinux-sys = "0.6.14"

[build-dependencies]
#gumshoe = { path = "../../frida-gum-rs" }
gumshoe = { git = "https://github.com/ChaosData/frida-gum-rs" }
cc = "1.0"
base64 = "0.13"
